# libft

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
includes/: ft_btrees.h  ft_defines.h  ft_structs.h  libft.h
src_atoi_itoa/: ft_atoi.c  ft_atoll.c  ft_atoll_base.c  ft_atoull.c  ft_strtod.c
src_binary_trees/: avl_delete_node.c  avl_insert_data.c  avl_tree_helper_functions.c  avl_tree_rebalancing.c  btree_apply_preorder.c  btree_level_count.c  free_btree.c
src_btrees/: avl_delete_node.c  avl_insert_data.c  avl_tree_create_node.c  avl_tree_helper_functions.c  avl_tree_rebalancing.c  btree_apply_inorder.c  btree_apply_postorder.c  btree_apply_preorder.c  btree_create_node.c  btree_find_item.c  btree_insert_data.c  btree_print.c
src_list/: ft_lstadd.c  ft_lstaddback.c  ft_lstaddback_p.c  ft_lstdel_p.c  ft_lstmap.c  ft_lstnew.c  ft_lstnew_p.c  ft_lstprint.c
src_math/: ft_max.c  ft_min.c  ft_swap.c
src_memory/: ft_bzero.c  ft_memcpy.c
src_stack/: ft_stack.c
src_string/: ft_del_whitespaces.c  ft_read_files.c  ft_readfile.c  ft_strcat.c  ft_strdup.c  ft_strdup_l.c  ft_strequ.c  ft_strjoin.c  ft_strlen.c  ft_strlen_char.c  ft_strnew.c  ft_strstr.c  ft_trim_c.c  get_next_line.c  gnl.c
src_utils/: check_positions.c  count_digits.c  count_digits_base.c  ft_count_digits.c  ft_count_digits_base.c  ft_isspace.c  pass_spaces.c
